--- a/week-08/day-05/ProgrammerFoxClub/src/main/resources/templates/tricks.html
+++ b/week-08/day-05/ProgrammerFoxClub/src/main/resources/templates/tricks.html
@@ -11,27 +11,33 @@
 </h1>
 <ul>
     <li>
-        <a th:href="@{/}">Information</a>
-    </li>
-    <li>
         <a th:href="@{/login}">Login</a>
     </li>
     <li>
         <a th:href="@{/nutritionStore}">Nutrition Store</a>
     </li>
+    <li>
+        <a th:href="@{/tricks}">Learn tricks</a>
+    </li>
+    <li>
+        <a th:href="@{/actions}">Action History</a>
+    </li>
 </ul>
 <img th:src="@{/greenfox.png}">
 <div th:if="${fox == false}">
-<form  th:action="@{/tricks}" th:method="post" th:name="trick">
-    <label th:id="select">Choose a trick to learn:
-        <select th:id="select" th:name="trick">
-            <option th:each="trick : ${tricks}" th:text="${trick}"></option>
-        </select>
-        <button type="submit">Learn!</button>
-    </label>
-</form>
+    <form th:action="@{/tricks}" th:method="post" th:name="trick">
+        <label th:id="select">Choose a trick to learn:
+            <select th:id="select" th:name="trick">
+                <option th:each="trick : ${tricks}" th:text="${trick}"></option>
+            </select>
+            <button type="submit">Learn!</button>
+        </label>
+    </form>
 </div>
 <div th:if="${fox == true}">
     <h1> The fox knows all the tricks!</h1>
 </div>
+<form th:action="@{/}" th:method="get">
+    <button type="submit">Home</button>
+</form>
 </body>
