--- a/week-08/day-05/ProgrammerFoxClub/src/main/resources/templates/index.html
+++ b/week-08/day-05/ProgrammerFoxClub/src/main/resources/templates/index.html
@@ -19,6 +19,9 @@
     <li>
         <a th:href="@{/tricks}">Learn tricks</a>
     </li>
+    <li>
+        <a th:href="@{/actions}">Action History</a>
+    </li>
 </ul>
 <img th:src="@{/greenfox.png}">
 <p th:text="'This is ' + ${fox.getName()} + '. Currently living on ' + ${fox.getFood()} + ' and ' + ${fox.getDrink()} + '. He knows ' + ${fox.getTricks().size()} + ' tricks.'"></p>
@@ -29,6 +32,10 @@
 <p th:if="${fox.getTricks().isEmpty()}">You do not know any tricks at the moment</p>
 <ul>
     <li th:each=" trick : ${fox.getTricks()}" th:text="${trick}"></li>
+</ul>
+<h1>Recent actions:</h1>
+<ul>
+    <li th:each="action : ${actions}" th:text="${action}"></li>
 </ul>
 </body>
 </html>
