--- a/week-08/day-05/ProgrammerFoxClub/src/main/resources/templates/login.html
+++ b/week-08/day-05/ProgrammerFoxClub/src/main/resources/templates/login.html
@@ -11,13 +11,16 @@
 </h1>
 <ul>
     <li>
-        <a th:href="@{/}">Information</a>
-    </li>
-    <li>
         <a th:href="@{/login}">Login</a>
     </li>
     <li>
         <a th:href="@{/nutritionStore}">Nutrition Store</a>
+    </li>
+    <li>
+        <a th:href="@{/tricks}">Learn tricks</a>
+    </li>
+    <li>
+        <a th:href="@{/actions}">Action History</a>
     </li>
 </ul>
 <form th:action="@{/login}" th:name="name" th:method="post">
