--- a/week-08/day-05/ProgrammerFoxClub/src/main/resources/templates/tricks.html
+++ b/week-08/day-05/ProgrammerFoxClub/src/main/resources/templates/tricks.html
@@ -11,30 +11,28 @@
 </h1>
 <ul>
     <li>
-        <a th:href="@{/login}">Login</a>
+        <a th:href="@{'/nutritionStore/' + ${fox.getName()}}">Nutrition Store</a>
     </li>
     <li>
-        <a th:href="@{/nutritionStore}">Nutrition Store</a>
-    </li>
-    <li>
-        <a th:href="@{/tricks}">Learn tricks</a>
-    </li>
-    <li>
-        <a th:href="@{/actions}">Action History</a>
+        <a th:href="@{'/actions/' + ${fox.getName()}}">Action History</a>
     </li>
 </ul>
 <img th:src="@{/greenfox.png}">
-<div th:if="${fox == false}">
-    <form th:action="@{/tricks}" th:method="post" th:name="trick">
+<h1>Known tricks:</h1>
+<ul th:each="trick : ${fox.getTricks()}">
+    <li th:text="${trick.getName()}"></li>
+</ul>
+<div th:if="${!tricks.isEmpty()}">
+    <form th:action="@{'/tricks/' + ${fox.getName()}}" method="post" th:name="trick">
         <label th:id="select">Choose a trick to learn:
             <select th:id="select" th:name="trick">
-                <option th:each="trick : ${tricks}" th:text="${trick}"></option>
+                <option th:each="trick : ${tricks}" th:text="${trick.getName()}"></option>
             </select>
             <button type="submit">Learn!</button>
         </label>
     </form>
 </div>
-<div th:if="${fox == true}">
+<div th:if="${tricks.isEmpty()}">
     <h1> The fox knows all the tricks!</h1>
 </div>
 <form th:action="@{/}" th:method="get">
