--- a/week-10/day-02/Reddit/src/main/resources/templates/addpost.html
+++ b/week-10/day-02/Reddit/src/main/resources/templates/addpost.html
@@ -2,13 +2,13 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Reddit clone index</title>
-    <link rel="stylesheet" th:href="@{/style.css}"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <meta charset="utf-8"/>
 </head>
 <body>
 <h1>Submit a new post</h1>
 
-<form th:action="@{/addPost}" method="post">
+<form th:action="@{'/addPost/' + ${id}}" method="post">
     <label>Title:
         <input type="text" th:name="text" placeholder="Type name of the post">
     </label>
