--- a/week-10/day-02/Reddit/src/main/resources/templates/index.html
+++ b/week-10/day-02/Reddit/src/main/resources/templates/index.html
@@ -2,25 +2,25 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Reddit clone index</title>
-    <link rel="stylesheet" th:href="@{/style.css}"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <meta charset="utf-8"/>
     <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
-<a th:class="hyperlink" th:href="@{/addPost}">Submit new post</a>
+<a th:class="hyperlink" th:href="@{'/addPost/' + ${id}}">Submit new post</a>
 <h1>Trending posts</h1>
 <table>
     <tbody>
     <tr th:each="post : ${posts}">
-        <td th:text="${post.getVotes()}"></td>
-        <td><a th:style="'text-decoration:none'" th:href="@{'/upvote/' + ${post.getId()}}">+</a></td>
-        <td><a th:style="'text-decoration:none'" th:href="@{'/downvote/' + ${post.getId()}}">-</a></td>
+        <td th:text="${post.getVotes()}"></td> <!--th:disabled="${votes.checkVoteByPostId(post.getId()) && votes.findByPostId(post.getId(), votes).getVoteValue() == 1}"-->
+        <td><a th:style="'text-decoration:none'" th:href="@{'/upvote/' + ${id} + '/' + ${post.getId()}}">+</a></td>
+        <td><a th:style="'text-decoration:none'" th:href="@{'/downvote/' + ${id} + '/' + ${post.getId()}}">-</a></td>
         <td th:text="${post.getText()}"></td>
         <td th:text="${post.getDate()}"></td>
     </tr>
     </tbody>
 </table>
-<a th:unless="${page - 1 <= 0}" th:href="@{/previous}">Previous>></a>
-<a th:unless="${posts.size() < 10}" th:href="@{/next}">Next>></a>
+<a th:unless="${page - 1 <= 0}" th:href="@{'/previous/' + ${id}}">Previous</a>
+<a th:unless="${posts.size() < 10}" th:href="@{'/next/' + ${id}}">Next</a>
 </body>
 </html>
