--- a/week-10/day-02/Reddit/src/main/resources/templates/login.html
+++ b/week-10/day-02/Reddit/src/main/resources/templates/login.html
@@ -2,22 +2,25 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Reddit clone index</title>
-    <link rel="stylesheet" th:href="@{/style.css}"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <meta charset="utf-8"/>
     <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
-<h1>Log in, please:</h1>
-<form th:action="@{/index}" method="post">
-    <label>User name:
-        <input type="text" name="name" required>
-    </label>
-    <label>Password:
-        <input type="password" name="password" required>
-    </label>
-    <button type="submit">Log in</button>
-</form>
-<a th:href="@{/register}">Create a new account</a>
-
+<div class="d-flex justify-content-center d-flex align-items-end">
+    <h1>Log in, please:</h1>
+    <form th:action="@{/login}" method="post">
+        <label>User name:
+            <input type="text" name="userName" required>
+        </label>
+        <label>Password:
+            <input type="password" name="password" required>
+        </label>
+        <button type="submit">Log in</button>
+    </form>
+    <h1 th:if="${error == true}" style="color: red"> User does not exist. Maybe, register?</h1>
+    <a th:href="@{/register}">Create a new account</a>
+</div>
 </body>
 </html>
