--- a/week-10/day-02/Reddit/src/main/resources/templates/register.html
+++ b/week-10/day-02/Reddit/src/main/resources/templates/register.html
@@ -2,23 +2,29 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Reddit clone register</title>
-    <link rel="stylesheet" th:href="@{/style.css}"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <meta charset="utf-8"/>
     <link rel="stylesheet" href="../static/style.css">
 </head>
 <body>
-<h1>Create a new account:</h1>
-<form th:action="@{/register}" method="post">
-    <label>User name:
-        <input type="text" name="name" required>
-    </label>
-    <label>Password:
-        <input type="password" name="password1" required>
-    </label>
-    <label>Password check:
-        <input type="password" name="password2" required>
-    </label>
-    <button type="submit">Log in</button>
-</form>
+<div class="d-flex justify-content-center">
+    <h1>Create a new account:</h1>
+    <p th:if="${error2 == true}" style="color: red"
+       th:text="'The user ' + ${userName} + ' already exists. Please, log in.'"></p>
+    <form th:action="@{/register}" method="post">
+        <label>User name:
+            <input type="text" th:name="name" th:value="${userName}" required>
+        </label>
+        <label>Password:
+            <input type="password" th:name="password1" required>
+        </label>
+        <label>Password check:
+            <input type="password" th:name="password2" required>
+        </label>
+        <p th:if="${error1 == true}" style="color: red">The passwords do not match</p>
+        <button type="submit">Register</button>
+    </form>
+</div>
 </body>
 </html>
