--- a/week-10/day-02/Reddit/src/main/resources/templates/index.html
+++ b/week-10/day-02/Reddit/src/main/resources/templates/index.html
@@ -2,7 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Reddit clone index</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <meta charset="utf-8"/>
     <link rel="stylesheet" href="../static/style.css">
 </head>
@@ -12,9 +13,14 @@
 <table>
     <tbody>
     <tr th:each="post : ${posts}">
-        <td th:text="${post.getVotes()}"></td> <!--th:disabled="${votes.checkVoteByPostId(post.getId()) && votes.findByPostId(post.getId(), votes).getVoteValue() == 1}"-->
-        <td><a th:style="'text-decoration:none'" th:href="@{'/upvote/' + ${id} + '/' + ${post.getId()}}">+</a></td>
-        <td><a th:style="'text-decoration:none'" th:href="@{'/downvote/' + ${id} + '/' + ${post.getId()}}">-</a></td>
+        <td th:text="${votes.sumVotesbyPostId(post.getId())}"></td>
+
+        <td th:if="${votes.findVoteByUserIdAndPostId(id, post.getId()) == 1}"><button disabled>+</button></td>
+        <td th:if="${votes.findVoteByUserIdAndPostId(id, post.getId()) < 1}"><a
+                th:style="'text-decoration:none'" th:href="@{'/upvote/' + ${id} + '/' + ${post.getId()}}"><button>+</button></a></td>
+        <td th:if="${votes.findVoteByUserIdAndPostId(id, post.getId()) == -1}"><button disabled>-</button></td>
+        <td th:if="${votes.findVoteByUserIdAndPostId(id, post.getId()) > -1}"><a
+                th:style="'text-decoration:none'" th:href="@{'/downvote/' + ${id} + '/' + ${post.getId()}}"><button>-</button></a></td>
         <td th:text="${post.getText()}"></td>
         <td th:text="${post.getDate()}"></td>
     </tr>
